--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <body>
     <script src="prague.js"></script>
     <script src="utils.js"></script>
+    <script src="grid.js"></script>
+    <script src="countdown.js"></script>
     <script src="index.js"></script>
     <script src="player.js"></script>
     <script src="arworks.js"></script>
