--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Dialog</title>
+    <title>Je to jako procházet se Prahou</title>
 
     <link rel="stylesheet" type="text/css" href="style.css" />
 
@@ -13,12 +13,21 @@
   </head>
 
   <body>
-    <script src="prague.js"></script>
-    <script src="utils.js"></script>
-    <script src="grid.js"></script>
-    <script src="countdown.js"></script>
-    <script src="index.js"></script>
-    <script src="player.js"></script>
-    <script src="arworks.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/prague.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/grid.js"></script>
+    <script src="js/countdown.js"></script>
+    <script src="js/camera.js"></script>
+
+    <!-- Modal system files -->
+    <script src="js/modal/modal-utils.js"></script>
+    <script src="js/modal/modal-events.js"></script>
+    <script src="js/modal/modal-draw.js"></script>
+    <script src="js/modal/modal.js"></script>
+
+    <script src="js/player.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/arworks.js"></script>
   </body>
 </html>
