change pallete. add modals, touch movement, artworks

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   </head>
 
   <body>
+    <script src="assets/data/prague.js"></script>
+    <script src="assets/data/arworks.js"></script>
+
     <script src="js/config.js"></script>
-    <script src="js/prague.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/grid.js"></script>
     <script src="js/countdown.js"></script>
@@ -28,6 +30,5 @@
 
     <script src="js/player.js"></script>
     <script src="js/index.js"></script>
-    <script src="js/arworks.js"></script>
   </body>
 </html>
