--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="js/grid.js"></script>
     <script src="js/countdown.js"></script>
     <script src="js/camera.js"></script>
+    <script src="js/lives.js"></script>
 
     <!-- Modal system files -->
     <script src="js/modal/modal-utils.js"></script>
