--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="js/countdown.js"></script>
     <script src="js/camera.js"></script>
     <script src="js/lives.js"></script>
+    <script src="js/end.js"></script>
 
     <!-- Modal system files -->
     <script src="js/modal/modal-utils.js"></script>
